--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "api-example",
   "version": "1.0.0",
-  "description": "",
+  "description": "Simple API connecting with mysql database using Promises in controllers",
   "main": "index.js",
   "scripts": {
     "start": "cross-env NODE_ENV=production node server.js",
